--- a/mogo-apps-ios/reminder-list/ReminderList.storyboard
+++ b/mogo-apps-ios/reminder-list/ReminderList.storyboard
@@ -16,21 +16,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A65-uv-1Zb">
-                                <rect key="frame" x="186" y="15" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eN9-Tz-Xeb">
-                                <rect key="frame" x="347" y="11" width="48" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Cancel"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eN9-Tz-Xeb">
+                                <rect key="frame" x="346" y="40" width="48" height="30"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleColor" red="0.086274509803921567" green="0.47450980392156861" blue="0.43137254901960786" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                                </state>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AyT-5L-sx3">
-                                <rect key="frame" x="0.0" y="49" width="414" height="813"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelectionDuringEditing="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AyT-5L-sx3">
+                                <rect key="frame" x="0.0" y="80" width="414" height="792"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="reminderCellIdentifier" textLabel="Xuu-iV-tqV" detailTextLabel="eZr-iY-xSX" rowHeight="58" style="IBUITableViewCellStyleSubtitle" id="k3F-aF-QXs" customClass="ReminderViewCell" customModule="mogo_apps_ios" customModuleProvider="target">
@@ -54,17 +47,9 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rqz-Nh-1Op">
-                                                    <rect key="frame" x="0.0" y="-1" width="403" height="59"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <connections>
-                                                        <action selector="reminderActionButton:" destination="Iea-0H-V3L" eventType="touchUpInside" id="cxN-nF-45F"/>
-                                                    </connections>
-                                                </button>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="reminderActionButton" destination="Rqz-Nh-1Op" id="OEL-VQ-wVR"/>
                                             <outlet property="reminderDetail" destination="eZr-iY-xSX" id="lyG-tS-ADI"/>
                                             <outlet property="reminderTitle" destination="Xuu-iV-tqV" id="JFh-Xf-ff8"/>
                                         </connections>
@@ -75,18 +60,50 @@
                                     <outlet property="delegate" destination="LCX-3n-X5M" id="ybl-H6-YQN"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reminder List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A65-uv-1Zb">
+                                <rect key="frame" x="155" y="44.5" width="113" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="X4e-zt-I8r"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="eN9-Tz-Xeb" firstAttribute="leading" secondItem="A65-uv-1Zb" secondAttribute="trailing" constant="78" id="1EF-uX-xr1"/>
+                            <constraint firstItem="AyT-5L-sx3" firstAttribute="top" secondItem="eN9-Tz-Xeb" secondAttribute="bottom" constant="10" id="4Oz-XY-CzY"/>
+                            <constraint firstItem="eN9-Tz-Xeb" firstAttribute="centerY" secondItem="A65-uv-1Zb" secondAttribute="centerY" id="8SE-TG-4bk"/>
+                            <constraint firstItem="AyT-5L-sx3" firstAttribute="leading" secondItem="X4e-zt-I8r" secondAttribute="leading" id="Asb-7J-YCf"/>
+                            <constraint firstItem="AyT-5L-sx3" firstAttribute="bottom" secondItem="X4e-zt-I8r" secondAttribute="bottom" constant="10" id="JEk-ZQ-np6"/>
+                            <constraint firstItem="eN9-Tz-Xeb" firstAttribute="top" secondItem="IgH-GC-sG6" secondAttribute="topMargin" constant="-4" id="YIH-6g-sWg"/>
+                            <constraint firstItem="eN9-Tz-Xeb" firstAttribute="trailing" secondItem="IgH-GC-sG6" secondAttribute="trailingMargin" id="p0K-o5-lww"/>
+                            <constraint firstItem="AyT-5L-sx3" firstAttribute="centerX" secondItem="IgH-GC-sG6" secondAttribute="centerX" id="zje-UB-UUg"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="reminderTable" destination="AyT-5L-sx3" id="Ie2-96-Baw"/>
+                        <segue destination="EsT-ex-Ahp" kind="showDetail" identifier="segueToDetail" id="zaq-V9-441"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nIL-bD-8xh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="Iea-0H-V3L" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="79.6875"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="m9X-C7-00J">
+            <objects>
+                <viewController id="EsT-ex-Ahp" customClass="DetailViewController" customModule="mogo_apps_ios" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4Jq-Fi-56a">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="gye-D4-47s"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Vc4-ic-Bp9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FzJ-tu-E5M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="841" y="250"/>
         </scene>
     </scenes>
     <resources>
